feat:example page and hot update

--- a/example/index.html
+++ b/example/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <script>
-        
+    <script type="module">
+        import lunar from '../dist/index.esm.js';
+        console.log(lunar());
     </script>
   </body>
 </html>
